Исправлены баги
